Refactored UBSClientServiceImpl and added validation to AddresController (#1487)